# FastAPI_Base_template

./: .env.example  .pre-commit-config.yaml  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml  setup.cfg
app/: __init__.py
app/configuration/: events.py  server.py
app/internal/pkg/middlewares/: graceful_shutdown.py
app/internal/repository/: __init__.py
app/internal/repository/v1/postgresql/: __init__.py  city.py  connection.py  country.py
app/internal/repository/v1/postgresql/handlers/: collect_response.py  handle_exception.py  insert_changelog.py
app/internal/repository/v1/rabbitmq/: base_repository.py  connection.py
app/internal/repository/v1/redis/: base_repository.py
app/internal/repository/v1/redis/handlers/: collect_response.py
app/internal/routes/v1/: __init__.py  bid.py  city.py  country.py
app/internal/services/v1/: __init__.py  bid.py  city.py  country.py
app/internal/workers/: __init__.py
app/pkg/clients/: base_clients.py
app/pkg/clients/v1/: __init__.py
app/pkg/connectors/: __init__.py
app/pkg/connectors/postgresql/: __init__.py  resource.py
app/pkg/logger/: logger.py
app/pkg/models/: __init__.py
app/pkg/models/base/: model.py  optional_field.py  settings_enum.py
app/pkg/models/types/: strings.py
app/pkg/models/v1/: __init__.py
app/pkg/models/v1/app/: bid.py  city.py  consumer.py  country.py
app/pkg/models/v1/exceptions/: centrifugo.py  city.py  client.py  country.py
app/pkg/models/v1/exceptions/association/: __init__.py  aiopg.py
app/pkg/settings/: settings.py
docker/app/: Dockerfile
docker/migrations/: Dockerfile
docker/redis/: Dockerfile
migrations/: 20231112_05_knHgl-cities.py  20231112_10_wPUeW-countries.py  20240723_01_ghTiZ-country-changelog.py
scripts/: init-centrifugo.sh  init-db.sh  migrate.py
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/handlers/: equals.py
tests/fixtures/repository/postgresql/: inserters.py  postgresql.py
tests/fixtures/router/: client.py  responses.py
tests/fixtures/types/: response_types.py
tests/v1/fixtures/repository/postgresql/: inserters.py  repositories.py
tests/v1/fixtures/services/: city.py  services.py
(+15 files in other folders)
